--- a/home/package.json
+++ b/home/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
+    "cypress": "^12.7.0",
     "html-webpack-plugin": "^5.3.2",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
